@@ -22,9 +22,17 @@ subprojects {
     apply plugin: 'io.freefair.lombok'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-    
+
     repositories {
         mavenCentral()
+    }
+
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
+    }
+
+    test {
+        jvmArgs(['--enable-preview'])
     }
 
     dependencies {
